--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "expense_tracker",
+  "name": "expense-tracker",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.1",
-    "@mui/material": "^6.1.1",
-    "@mui/styled-engine-sc": "^6.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "notistack": "^3.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
-    "recharts": "^2.12.7",
-    "styled-components": "^6.1.13",
+    "recharts": "^2.12.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
